<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroContaFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_da_categoria"
        android:id="@+id/edDescricaoCategoria"
        android:textSize="20sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/descricao" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edValor"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/valor" />

        <TextView
            android:id="@+id/txtVencimento"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/selecionar_o_vencimento"
            android:gravity="center"
            android:onClick="selecionarVencimento"/>
    </LinearLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cadastrarConta"
        android:text="@string/ok" />

</LinearLayout>